[package]
name = "lil-broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pretty_assertions = "1.4.0"
serde = {version = "1.0.197", features = ["derive"]}
tracing = {version = "0.1.40", features = ["log"]}
