[package]
name = "lil-gcs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
victory-data-store = { git = "https://github.com/victoryforphil/victory-suite.git", version = "0.0.1" }
victory-wtf = { git = "https://github.com/victoryforphil/victory-suite.git", version = "0.0.1" }
victory-broker = { git = "https://github.com/victoryforphil/victory-suite.git", version = "*" }
lil-link = { path = "../lil-link" }
serde_json = "1.0.132"

[profile.dev]
malloc = "system"

[profile.release]
malloc = "system"