[package]
name = "lil-gcs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
websocket = "0.27.1"
rmp-serde = "1.3.0"

serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
victory-broker = { workspace = true }
victory-data-store = { workspace = true }
victory-wtf = { workspace = true }

lil-link = { path = "../lil-link" }
serde_json = "1.0.132"
polars = { version = "0.44.0", features = ["csv"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
futures = "0.3.31"
