[package]
name = "lil-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
nalgebra = {version = "0.27.0", features = ["serde-serialize"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"