[package]
name = "lil-launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link_raw_test"
path = "bin_tests/link_raw_test.rs"

[[bin]]
name = "link_smoketest"
path = "bin_tests/link_smoketest.rs"

[[bin]]
name = "quad_sil"
path = "bin_tests/quad_sil.rs"

[[bin]]
name = "quad_idle"
path = "bin_tests/quad_idle.rs"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
log = "0.4.22"
mavlink = "0.13.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
victory-data-store = { workspace = true }
victory-wtf = { workspace = true }
victory-broker = { workspace = true }
lil-rerun = { path = "../lil-rerun" }
lil-quad = { path = "../lil-quad" }
lil-link = { path = "../lil-link" }
tokio = { version = "1.41.1", features = ["full"] }

tracing-tracy = { version = "0.11.3", features = [ "enable", "callstack-inlines", "code-transfer", "delayed-init", "sampling", "system-tracing"] }
