[package]
name = "lil-link"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
log = "0.4.22"
mavlink = "0.13.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
victory-broker = { workspace = true }
victory-data-store = { workspace = true }
victory-wtf = { workspace = true }
