[package]
name = "lil-quad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
env_logger = "0.11.3"
lil-broker = { path = "../lil-broker" }
pretty_assertions = "1.4.0"
serde = {version = "1.0.197", features = ["derive"]}
tracing = {version = "0.1.40"}
tracing-subscriber = "0.3.18"
tracing-tracy = { version = "0.11.0", features = [] }
