[package]
name = "lil-sym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
nalgebra = "0.32.5"
rapier3d = "0.18.0"
lil-broker = { path = "../lil-broker" }
lil-helper = { path = "../lil-helper" }
lil-quad = { path = "../lil-quad" }
tracing = { version = "0.1.40", features = [] }
env_logger = "0.11.3"
rerun = "0.15.1"

[lib]
